; ModuleID = '/home/carl/AnghaBench/the_silver_searcher/src/extr_print.c_print_column_number.c'
source_filename = "/home/carl/AnghaBench/the_silver_searcher/src/extr_print.c_print_column_number.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }

@out_fd = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [6 x i8] c"%lu%c\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @print_column_number(%struct.TYPE_3__* %0, i64 %1, i64 %2, i8 signext %3) #0 {
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8, align 1
  %9 = alloca i64, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  store i8 %3, i8* %8, align 1
  store i64 0, i64* %9, align 8
  %10 = load i64, i64* %7, align 8
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %12 = load i64, i64* %6, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i64 %12
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = icmp ule i64 %10, %15
  br i1 %16, label %17, label %26

17:                                               ; preds = %4
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %19 = load i64, i64* %6, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i64 %19
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = load i64, i64* %7, align 8
  %24 = sub i64 %22, %23
  %25 = add i64 %24, 1
  store i64 %25, i64* %9, align 8
  br label %26

26:                                               ; preds = %17, %4
  %27 = load i32, i32* @out_fd, align 4
  %28 = load i64, i64* %9, align 8
  %29 = load i8, i8* %8, align 1
  %30 = call i32 @fprintf(i32 %27, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i64 %28, i8 signext %29)
  ret void
}

declare dso_local i32 @fprintf(i32, i8*, i64, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
